--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "deploy-storybook": "storybook build && npx gh-pages -d storybook-static"
+    "deploy-storybook": "storybook build && npx gh-pages -d storybook-static",
+    "check:fonts": "grep -R --line-number -E 'font-family\\s*:\\s*(?!var\\()' src || true && grep -R --line-number 'fontFamily\\s*:' src || true"
   },
   "keywords": [],
   "author": "",
@@ -25,12 +26,15 @@
     "@storybook/addon-onboarding": "^10.0.2",
     "@storybook/addon-vitest": "^10.0.2",
     "@storybook/react-vite": "^10.0.2",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "@vitest/browser-playwright": "^4.0.5",
     "@vitest/coverage-v8": "^4.0.5",
     "playwright": "^1.56.1",
     "prop-types": "^15.8.1",
     "storybook": "^10.0.2",
     "tsx": "^4.20.6",
+    "typescript": "^5.0.0",
     "vitest": "^4.0.5"
   }
 }
